k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: controlresell-staging-stripe-to-amplitude-webhook
  namespace: default
  labels:
    app.kubernetes.io/name: stripe-to-amplitude
    app.kubernetes.io/component: webhook
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: stripe-to-amplitude
    app.kubernetes.io/component: webhook
  ports:
    - name: http
      port: 80
      targetPort: 3000
